# msd_uncertainty_ebook

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  DISCLAIMER  Dockerfile  Dockerfile_dev  LICENSE  MANIFEST.in  README.md  README.rst  index.html  pyproject.toml  requirements.txt  setup.py  workflow.yml
.github/ISSUE_TEMPLATE/: contribution_proposal.yml  custom.md
.github/PULL_REQUEST_TEMPLATE/: contribution_checklist.md
.github/workflows/: 01_test.yml  02_deploy.yml  03_dev_deploy.yml  04_publish-to-pypi.yml  linux.yml  osx.yml  windows.yml
_app/: error.svelte-bcbf8e93.js  manifest.json  start-026368a9.js  start-1c47bd51.js  start-44322b2d.js  start-5f63ebd7.js  start-693b0ee1.js  start-89df267f.js  start-c728f44a.js  start-d083e84e.js  start-e95047e4.js  start-ff83d8a8.js  version.json
_app/chunks/: vendor-80631b75.js
_app/pages/: __layout.svelte-3f8aeddf.js  index.svelte-2e1d6f8a.js  index.svelte-81810fd3.js  index.svelte-8e8fb8d8.js  index.svelte-9bd37b01.js  index.svelte-a5ebf470.js  index.svelte-ad0292c4.js  index.svelte-c8316ed8.js  index.svelte-d6444ab9.js  index.svelte-dd55218f.js  index.svelte-e4ad2017.js
dev/: CNAME  index.html
dev/_app/: manifest.json  start-3483acba.js  start-35cce25d.js  start-558c95cc.js  start-5e27234a.js  start-5e9c1edf.js  start-7ce86fca.js  start-828ba6ca.js  start-aa4865c6.js  start-c96cba30.js  start-d3ace107.js  start-e54e822d.js  start-ecde8722.js  start-ee884371.js  start-f0a59081.js  version.json
docs/: gmon.out  pyvenv.cfg  requirements.txt  revision_questions.txt
docs/html/: .buildinfo  1_introduction.html  2.1_overview_of_model_diagnostics.html  2.2_perspectives_on_diagnostic_model_evaluation.html  2_diagnostic_modeling_overview_and_perspectives.html  3.1_global_versus_local_sensitivity.html  3.2_why_perform_sensitivity_analysis.html  3.3.1_one_at_a_time_oat.html  3.3.2_full_fractional_factorial_sampling.html  3.3.3_latin_hypercube_sampling.html  3.3.4_low_discrepancy_sequences.html  3.3.5_other_types_of_sampling.html  3.3.6_synthetic_generation_of_input_time_series.html  3.3_design_of_experiments.html  3.4.1_derivative_based_methods.html  3.4.2_elementary_effect_methods.html  3.4.3_regression_based_methods.html  3.4.4_regional_sensitivity_analysis.html  3.4.5_variance_based_methods.html  3.4.6_analysis_of_variance_anova.html  3.4.7_moment_independent_density_based_methods.html  3.4_sensitivity_analysis_methods.html  3.5_how_to_choose_a_sensitivity_analysis_method_model_traits_and_dimensionality.html  3.6_software_toolkits.html  3_sensitivity_analysis_the_basics.html  4.1_understanding_errors_what_is_controlling_model_performance.html  4.2_consequential_dynamics_what_is_controlling_model_behaviors_of_interest.html  4.3_consequential_scenarios_what_is_controlling_consequential_outcomes.html  4_sensitivity_analysis_diagnostic_and_exploratory_modeling.html  5_conclusion.html  6_glossary.html  A1.1_UQ_Introduction.html  A1.2_Parametric_Bootstrap.html  A1.3_Precalibration.html  A1.4_Markov_Chain_Monte_Carlo.html  A1.5_Other_methods.html  A1.6_Critical_first_step.html  A1.7_Critical_final_step.html  A1.8_Key_take_home.html  A1_Uncertainty_Quantification.html  (+22 more)
docs/source/: 1.0_Introduction.rst  1_introduction.rst  2.0_diagnostic_modeling_overview_and_perspectives.rst  2.1_overview_of_model_diagnostics.rst  2.2_perspectives_on_diagnostic_model_evaluation.rst  2_diagnostic_modeling_overview_and_perspectives.rst  3.1_global_versus_local_sensitivity.rst  3.2_why_perform_sensitivity_analysis.rst  3.3.1_one_at_a_time_oat.rst  3.3.2_full_fractional_factorial_sampling.rst  3.3.3_latin_hypercube_sampling.rst  3.3.4_low_discrepancy_sequences.rst  3.3.5_other_types_of_sampling.rst  3.3.6_synthetic_generation_of_input_time_series.rst  3.3_design_of_experiments.rst  3.3_sensitivity_analysis_applications_for_model_evaluation_and_fidelity_testing.rst  3.4.1_derivative_based_methods.rst  3.4.2_elementary_effect_methods.rst  3.4.3_regression_based_methods.rst  3.4.4_regional_sensitivity_analysis.rst  3.4.5_variance_based_methods.rst  3.4.6_analysis_of_variance_anova.rst  3.4.7_moment_independent_density_based_methods.rst  3.4_sensitivity_analysis_applications_for_exploratory_modeling_and_scenario_discovery.rst  (+82 more)
extensions/: appendix.py
landing/: .gitignore  package-lock.json  package.json  svelte.config.js
msd/: pip-selfcheck.json
msdbook/: __init__.py  fishery_dynamics.py  generalized_fish_game.py  hymod.py  install_supplement.py  model.py  package_data.py  utils.py
nanites/: __init__.py  model.py
notebooks/: Bedford_Greene_SD_tutorial.ipynb  HYMOD_SA.ipynb  Hidden-Markov Modeling Approaches to Creating Synthetic Streamflow Scenarios.ipynb  Hidden-Markov Modeling Approaches to Creating Synthetic Streamflow Scenarios.ipynb.txt  Hidden-Markov_Modeling_Approaches_to_Creating_Synthetic_Streamflow_Scenarios.ipynb  basin_users_logistic_regression.ipynb  fishery_dynamics.ipynb  generalized_fish_game.py  hymod.ipynb  mcmc.ipynb  sa_saltelli_sobol_ishigami.ipynb  sensitivity_analysis.ipynb  utils.py
source/: modules.rst  nanites.rst  nanites.tests.rst
tests/: test_fishery_dynamics  test_generalized_fish_game  test_model.py
(+159 files in other folders)
