[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msdbook"
version = "0.1.5"
description = "Jupyter notebook support for the MSD uncertainty ebook."
readme = "README.md"
requires-python = ">=3.6, <4"
keywords = ["uncertainty characterization", "MSD", "MultiSector Dynamics"]
authors = [
  { name="Chris R. Vernon", email="chris.vernon@pnnl.gov" },
  { name="Em Rexer", email="emily.rexer@pnnl.gov" },
]

classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.21.1,<2",
    "importlib>=1.0.4",
    "scipy>=1.8.1",
    "SALib>=1.4.4",
    "statsmodels>=0.12.2",
    "pandas>=1.3.1",
    "matplotlib>=3.4.2",
    "seaborn>=0.11.2",
    "requests>=2.25.1",
    "scikit-learn>=0.24.2",
    "hmmlearn==0.2.7",
]

[project.optional-dependencies]
dev = [
    "autodoc>=0.5.0",
    "build>=0.5.1",
    "ipython>=8.0.1",
    "mathjax>=0.1.2",
    "nbsphinx>=0.8.6",
    "pre-commit>=3.7.1",
    "setuptools>=57.0.0",
    "sphinx>=4.0.2",
    "sphinx-book-theme>=0.2.0",
    "sphinxcontrib-bibtex>=2.4.1",
    "twine>=3.4.1",
]

[project.urls]
Homepage = "https://uc-ebook.org/"
Repository = "https://github.com/IMMM-SFA/msd_uncertainty_ebook"
Issues = "https://github.com/IMMM-SFA/msd_uncertainty_ebook/issues"
